
****  Add error when `resetall inside module (IEEE 2017-22.3).

****  Add cleaner error on version control conflicts in sources.

****  Fix little endian cell ranges, #1631. [Julien Margetts]

****  Fix queue issues, #1641, #1643. [Peter Monsson, Stefan Wallentowitz]

****  Fix strcasecmp for windows, #1651. [Kuba Ober]


* Verilator 4.024 2019-12-08

**    Support associative arrays (excluding [*] and pattern assignments), #544.

**    Support queues (excluding {} notation and pattern assignments), #545.

***   Add +verilator+error+limit to see more assertion errors. [Peter Monsson]

***   Support string.toupper and string.tolower.

***   Support $rewind and $ungetc.

***   Support shortreal as real, with a SHORTREAL warning.

****  Add -Wpedantic and -Wno-context for compliance testing.

****  Add error on redefining preprocessor directives. [Piotr Binkowski]

****  Support $value$plusargs float and shorts, #1592, #1619. [Garrett Smith]

****  Fix gate lvalue optimization error, #831. [Jonathon Donaldson, Driss Hafdi]

****  Fix color assertion on empty if, #1604. [Andrew Holme]

****  Fix for loop missing initializer, #1605. [Andrew Holme]

****  Fix hang on concat error, #1608. [Bogdan Vukobratovic]

****  Fix VPI timed callbacks to be one-shot, pull5. [Matthew Ballance]

****  Fix // in filenames, #1610. [Peter Nelson]

****  Fix $display("%p") to be closer to IEEE.

****  Fix labels on functions with returns, #1614. [Mitch Hayenga]

****  Fix false unused message on __Vemumtab, #2061. [Tobias Rosenkranz]

****  Fix assertion on dotted parameter arrayed function, #1620. [Rich Porter]

****  Fix interface reference tracing, #1595. [Todd Strader]

****  Fix error on unpacked concatenations, #1627. [Driss Hafdi]


* Verilator 4.022 2019-11-10

**    Add --protect-lib, #1490. [Todd Strader]

**    Add cmake support, #1363. [Patrick Stewart]

***   Examples have been renamed.

***   Add --protect-ids to obscure information in objects, #1521. [Todd Strader]
