@@ -24,6 +24,7 @@ Lukasz Dalek
 Maarten De Braekeleer
 Matthew Ballance
 Mike Popoloski
+Peter Monsson
 Patrick Stewart
 Philipp Wagner
 Richard Myers
